--- a/dev/views/config/config.pug
+++ b/dev/views/config/config.pug
@@ -9,7 +9,7 @@
 -const kebabs = ['pollo']
 -const starters = ['nuggets (6 unidades)', 'croquetas (6 unidades)', 'empanadillas (6 unidades)', 'san Jacobos (2 unidades)', 'twister (10 unidades)', 'fingers (6 unidades)', 'torpedo (12 unidades)', 'delicias de pollo']
 -const chips = ['ali-oli', 'bravas', 'rancheras', 'bacon-chedar', 'salchipapas']
--const waffles = ['nutella y nata montada', 'helado, nutella y nata montada']
+-const waffles = ['nutella y nata montada', 'helado, nutella y nata']
 -const crepes = ['nutella y nata montada', 'helado, chocolate y nata', 'chocolate blanco y nutella', 'piña, chocolate blanco y nata', 'melocotón, nutella y nata', 'york y queso']
 -const iceCreams = ['tarrina pequeña', 'tarrina grande', 'copa 2 bolas', 'copa 3 bolas', 'blanco y negro', 'granizado', 'batidos']
 -const drinks = ['refrescos', 'agua', 'cervezas', 'combinados']
