--- a/dev/views/includes/footer.pug
+++ b/dev/views/includes/footer.pug
@@ -1,5 +1,5 @@
 .footer-items
-    p © Cuky's 2020 | Diseñado y desarrollado por JoseMariaMQ
+    p © Cuky's 2020 | Created by JoseMariaMQ
         a(href="https://github.com/JoseMariaMQ" target="_blank").footer-items__links
             i.fab.fa-github
         a(href="https://www.linkedin.com/in/josemariamq/" target="_blank").footer-items__links
