Correciones de fallos

--- a/dev/views/config/config.pug
+++ b/dev/views/config/config.pug
@@ -54,7 +54,7 @@
 -const tortillaGuitarIngredients = ['tortilla francesa']
 
 //-Ingredients baguette
--const vegetableBaguetteIngredients = ['']
+-const vegetableBaguetteIngredients = ['cangrejo', 'atún', 'tomate', 'lechuga', 'mahonesa']
 -const tunaBaguetteIngredients = ['atún', 'tomate', 'mahonesa']
 -const hamBaguetteIngredients = ['jamón']
 -const chickenBaguetteIngredients = ['pollo']
@@ -74,11 +74,11 @@
 -const mincePizzaIngredients = ['tomate', 'carne picada', 'queso']
 -const crabPizzaIngredients = ['tomate', 'atún', 'queso', 'palitos de cangrejo']
 -const baconPizzaIngredients = ['tomate', 'bacon', 'queso']
--const kebabPizzaIngredients = ['ingredientes']
--const frankfurtPizzaIngredients = ['ingredientes']
--const fourCheesePizzaIngredients = ['ingredientes']
--const baconChickenPizzaIngredients = ['ingredientes']
--const miniPizzaIngredients = ['ingredientes']
+-const kebabPizzaIngredients = ['tomate', 'queso', 'pollo kebab']
+-const frankfurtPizzaIngredients = ['tomate', 'queso', 'salchichas de frankfurt']
+-const fourCheesePizzaIngredients = ['mozzarela', 'emental', 'edar', 'chedar']
+-const baconChickenPizzaIngredients = ['tomate', 'queso', 'pollo', 'bacon']
+-const miniPizzaIngredients = ['jamón york', 'queso', 'tomate']
 
 //-Ingredients paninis
 -const yorkPaniniIngredients = ['tomate', 'queso', 'jamón york']
