--- a/dev/views/includes/pizza-ingredients.pug
+++ b/dev/views/includes/pizza-ingredients.pug
@@ -156,7 +156,7 @@
     ul.ingredients
         h3 Ingredientes pizza de pollo y bacon:
         each baconChickenIngredients in baconChickenPizzaIngredients
-            li= chickenBaconIngredients
+            li= baconChickenIngredients
         center
             h4 Alérgenos:
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
