--- a/dev/scss/blocks/_products.scss
+++ b/dev/scss/blocks/_products.scss
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   border-radius: 15px;
+  box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
 
   & h2 {
     margin: 0;
