--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -148,7 +148,7 @@ body { display: grid; grid-template-columns: 1fr; grid-template-rows: 150px 1fr 
 
 .main { grid-column: 1 / -1; grid-row: 2 / 3; color: var(--text-color4); }
 
-.products { height: 35px; background-color: var(--text-color3); padding-left: 1rem; color: var(--text-color); display: flex; align-items: center; border-radius: 15px; }
+.products { height: 35px; background-color: var(--text-color3); padding-left: 1rem; color: var(--text-color); display: flex; align-items: center; border-radius: 15px; box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.5); }
 
 .products h2 { margin: 0; }
 
@@ -158,7 +158,9 @@ body { display: grid; grid-template-columns: 1fr; grid-template-rows: 150px 1fr 
 
 .products__items ol .item1 { font-size: .9rem; margin-left: .5rem; }
 
-.products__items ol .item2 { cursor: pointer; background-color: var(--primary-color); color: var(--text-color); padding: .23rem .4rem; border-radius: 15px; font-size: .6rem; float: right; }
+.products__items ol .item2 { background-color: var(--primary-color); color: var(--text-color); padding: .23rem .4rem; border: none; border-radius: 15px; font-size: .6rem; box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.5); float: right; }
+
+.products__items ol .item2 i { margin-left: .3rem; }
 
 .products__items ol .item3 { font-size: .6rem; float: right; margin-top: .25rem; margin-right: .2rem; }
 
@@ -178,10 +180,12 @@ body { display: grid; grid-template-columns: 1fr; grid-template-rows: 150px 1fr 
   .products__items li .item1 { font-size: 1.1rem; }
   .products__items li .item2 { font-size: .7rem; margin-top: .02rem; }
   .products__items li .item3 { font-size: 1rem; }
+  .products__items .flavors { font-size: .7rem; margin-top: .02rem; }
   .products__items .products__image { align-self: center; justify-content: center; } }
 
-@media screen and (min-width: 1024px) { .products__items li { font-size: 1.2rem; }
-  .products__items .item2 { font-size: .8rem; margin-top: 0; } }
+@media screen and (min-width: 1024px) { .products__items li .item1 { font-size: 1.2rem; }
+  .products__items li .item2 { font-size: .8rem; margin-top: 0; }
+  .products__items .flavors { font-size: .8rem; margin-top: .02rem; } }
 
 .lightbox { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); color: var(--text-color); z-index: 1000; display: flex; justify-content: center; align-items: center; transform: scale(0); transition: transform 0.3s; }
 
