--- a/dev/scss/blocks/_products-items.scss
+++ b/dev/scss/blocks/_products-items.scss
@@ -88,6 +88,10 @@
       & .item3 {
         font-size: 1rem;
       }
+
+      & .item4 {
+        padding-top: .05rem;
+      }
     }
 
     & .flavors {
@@ -111,6 +115,10 @@
       & .item2 {
         font-size: .8rem;
         margin-top: 0;
+      }
+
+      & .item4 {
+        padding-top: .1rem;
       }
     }
 
