--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -180,11 +180,13 @@ body { display: grid; grid-template-columns: 1fr; grid-template-rows: 150px 1fr 
   .products__items li .item1 { font-size: 1.1rem; }
   .products__items li .item2 { font-size: .7rem; margin-top: .02rem; }
   .products__items li .item3 { font-size: 1rem; }
+  .products__items li .item4 { padding-top: .05rem; }
   .products__items .flavors { font-size: .7rem; margin-top: .02rem; }
   .products__items .products__image { align-self: center; justify-content: center; } }
 
 @media screen and (min-width: 1024px) { .products__items li .item1 { font-size: 1.2rem; }
   .products__items li .item2 { font-size: .8rem; margin-top: 0; }
+  .products__items li .item4 { padding-top: .1rem; }
   .products__items .flavors { font-size: .8rem; margin-top: .02rem; } }
 
 .lightbox { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); color: var(--text-color); z-index: 1000; display: flex; justify-content: center; align-items: center; transform: scale(0); transition: transform 0.3s; }
