--- a/dev/views/includes/pizza-ingredients.pug
+++ b/dev/views/includes/pizza-ingredients.pug
@@ -10,16 +10,16 @@
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
             h3 Con menú:
-                p Pizza margarita +Bebida +Patatas
-                p 5,50€
-                .ingredients__img
-                    img(src="assets/img/pizza-min.png")
-                    img(src="assets/img/drink-min.png")
-                    img(src="assets/img/chips-min.png")
+            p Pizza margarita +Bebida +Patatas
+            p 5,50€
+            .ingredients__img
+                img(src="assets/img/pizza-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
 
 #campera-pizza-ingredients.lightbox
     ul.ingredients
-        h3 Ingredientes pizza de margarita:
+        h3 Ingredientes pizza campera:
         each camperaIngredients in camperaPizzaIngredients
             li= camperaIngredients
         center
@@ -29,12 +29,12 @@
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
             h3 Con menú:
-                p Pizza campera +Bebida +Patatas
-                p 5,50€
-                .ingredients__img
-                    img(src="assets/img/pizza-min.png")
-                    img(src="assets/img/drink-min.png")
-                    img(src="assets/img/chips-min.png")
+            p Pizza campera +Bebida +Patatas
+            p 5,50€
+            .ingredients__img
+                img(src="assets/img/pizza-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
 
 #mince-pizza-ingredients.lightbox
     ul.ingredients
@@ -48,12 +48,12 @@
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
             h3 Con menú:
-                p Pizza de carne picada +Bebida +Patatas
-                p 5,50€
-                .ingredients__img
-                    img(src="assets/img/pizza-min.png")
-                    img(src="assets/img/drink-min.png")
-                    img(src="assets/img/chips-min.png")
+            p Pizza de carne picada +Bebida +Patatas
+            p 5,50€
+            .ingredients__img
+                img(src="assets/img/pizza-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
 
 #crab-pizza-ingredients.lightbox
     ul.ingredients
@@ -69,12 +69,12 @@
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
             h3 Con menú:
-                p Pizza de cangrejo +Bebida +Patatas
-                p 5,50€
-                .ingredients__img
-                    img(src="assets/img/pizza-min.png")
-                    img(src="assets/img/drink-min.png")
-                    img(src="assets/img/chips-min.png")
+            p Pizza de cangrejo +Bebida +Patatas
+            p 5,50€
+            .ingredients__img
+                img(src="assets/img/pizza-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
 
 #bacon-pizza-ingredients.lightbox
     ul.ingredients
@@ -88,12 +88,12 @@
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
             h3 Con menú:
-                p Pizza de bacon +Bebida +Patatas
-                p 5,50€
-                .ingredients__img
-                    img(src="assets/img/pizza-min.png")
-                    img(src="assets/img/drink-min.png")
-                    img(src="assets/img/chips-min.png")
+            p Pizza de bacon +Bebida +Patatas
+            p 5,50€
+            .ingredients__img
+                img(src="assets/img/pizza-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
 
 #kebab-pizza-ingredients.lightbox
     ul.ingredients
@@ -107,12 +107,12 @@
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
             h3 Con menú:
-                p Pizza de kebab +Bebida +Patatas
-                p 5,50€
-                .ingredients__img
-                    img(src="assets/img/pizza-min.png")
-                    img(src="assets/img/drink-min.png")
-                    img(src="assets/img/chips-min.png")
+            p Pizza de kebab +Bebida +Patatas
+            p 5,50€
+            .ingredients__img
+                img(src="assets/img/pizza-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
 
 #frankfurt-pizza-ingredients.lightbox
     ul.ingredients
@@ -126,12 +126,12 @@
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
             h3 Con menú:
-                p Pizza de frankfurt +Bebida +Patatas
-                p 5,50€
-                .ingredients__img
-                    img(src="assets/img/pizza-min.png")
-                    img(src="assets/img/drink-min.png")
-                    img(src="assets/img/chips-min.png")
+            p Pizza de frankfurt +Bebida +Patatas
+            p 5,50€
+            .ingredients__img
+                img(src="assets/img/pizza-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
 
 #fourcheese-pizza-ingredients.lightbox
     ul.ingredients
@@ -145,12 +145,12 @@
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
             h3 Con menú:
-                p Pizza de cuatro quesos +Bebida +Patatas
-                p 5,50€
-                .ingredients__img
-                    img(src="assets/img/pizza-min.png")
-                    img(src="assets/img/drink-min.png")
-                    img(src="assets/img/chips-min.png")
+            p Pizza de cuatro quesos +Bebida +Patatas
+            p 5,50€
+            .ingredients__img
+                img(src="assets/img/pizza-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
 
 #baconchicken-pizza-ingredients.lightbox
     ul.ingredients
@@ -164,12 +164,12 @@
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
             h3 Con menú:
-                p Pizza de pollo y bacon +Bebida +Patatas
-                p 5,50€
-                .ingredients__img
-                    img(src="assets/img/pizza-min.png")
-                    img(src="assets/img/drink-min.png")
-                    img(src="assets/img/chips-min.png")
+            p Pizza de pollo y bacon +Bebida +Patatas
+            p 5,50€
+            .ingredients__img
+                img(src="assets/img/pizza-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
 
 #mini-pizza-ingredients.lightbox
     ul.ingredients
@@ -183,9 +183,9 @@
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
             h3 Con menú:
-                p Pizza mini-pizza +Bebida +Patatas
-                p 3,50€
-                .ingredients__img
-                    img(src="assets/img/pizza-min.png")
-                    img(src="assets/img/drink-min.png")
-                    img(src="assets/img/chips-min.png")
+            p Pizza mini-pizza +Bebida +Patatas
+            p 3,50€
+            .ingredients__img
+                img(src="assets/img/pizza-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
