Update prices and add dishes

--- a/dev/views/config/config.pug
+++ b/dev/views/config/config.pug
@@ -2,12 +2,12 @@
 -const burgers = ['normal', 'CRISPY-CUKYS', 'con huevo', 'con bacon', 'con queso', 'super', 'PREMIUM VACUNO', 'HAMBURGUESA XL']
 -const sandwiches = ['mixto', 'pollo', 'tintero', 'vegetal', 'especial']
 -const guitars = ['jamón', 'pollo', 'lomo', 'tortilla + jamón']
--const baguettes = ['baguette vegetal', 'baguette atún', 'baguette jamón', 'baguette pollo', 'baguette bacon + queso', 'baguette tortilla francesa', 'baguette tortilla + jamón', 'baguette magreta', 'baguette lomo', 'baguette lomo fresco', 'baguette calamares', 'baguette salchichas', 'baguette especial']
+-const baguettes = ['baguette vegetal', 'baguette atún', 'baguette jamón', 'baguette pollo', 'baguette pollo empanado', 'baguette bacon + queso', 'baguette tortilla francesa', 'baguette tortilla + jamón', 'baguette magreta', 'baguette lomo', 'baguette lomo fresco', 'baguette calamares', 'baguette salchichas', 'baguette especial']
 -const pizzas = ['margarita', 'campera', 'carne picada (BBQ)', 'cangrejo', 'bacon', 'kebab', 'frankfurt', 'cuatro quesos', 'pollo y bacon', 'mini-pizza']
 -const paninis = ['panini york', 'panini serrano', 'panini bacon', 'panini cangrejo', 'panini BBQ']
 -const hotDogs = ['perrito caliente']
 -const kebabs = ['pollo']
--const starters = ['nuggets (6 unidades)', 'croquetas (6 unidades)', 'empanadillas (6 unidades)', 'san Jacobos (2 unidades)', 'twister (10 unidades)', 'fingers (6 unidades)', 'torpedo (12 unidades)', 'delicias de pollo']
+-const starters = ['nuggets (6 unidades)', 'croquetas (6 unidades)', 'empanadillas (6 unidades)', 'san Jacobos (2 unidades)', 'twister (10 unidades)', 'fingers (6 unidades)', 'torpedo (12 unidades)', 'delicias de pollo', 'flamenquines', 'palomitas de pollo', 'tiras de pollo', 'gambas rebozadas']
 -const chips = ['ali-oli', 'bravas', 'rancheras', 'bacon-chedar', 'salchipapas']
 -const waffles = ['nutella y nata montada', 'helado, nutella y nata']
 -const crepes = ['nutella y nata montada', 'helado, chocolate y nata', 'chocolate blanco y nutella', 'piña, chocolate blanco y nata', 'melocotón, nutella y nata', 'york y queso']
@@ -15,30 +15,30 @@
 -const drinks = ['refrescos', 'agua', 'cervezas', 'combinados']
 
 //-Price products
--const priceBurgers = ['2,80€', '2,80€', '3,10€', '3,10€', '3,10€', '3,70€', '3,40€', '3,40€']
--const priceSandwiches = ['2,00€', '2,50€', '2,50€', '2,00€', '2,50€']
+-const priceBurgers = ['3,00€', '3,00€', '3,50€', '3,50€', '3,50€', '4,50€', '3,70€', '3,40€']
+-const priceSandwiches = ['2,20€', '2,70€', '2,70€', '2,20€', '2,70€']
 -const priceGuitars = ['3,50€', '3,50€', '3,50€', '3,50€']
--const priceBaguettes = ['2,50€', '2,50€', '2,80€', '2,80€', '2,80€', '2,50€', '2,80€', '2,80€', '2,80€', '2,80€', '2,80€', '2,80€', '2,80€']
--const pricePizzas = ['4,30€', '4,30€', '4,30€', '4,30€', '4,30€', '4,30€', '4,30€', '4,30€', '4,30€', '2,00€']
--const pricePaninis = ['2,00€', '2,00€', '2,00€', '2,00€', '2,00€']
--const priceHotDogs = ['2,00€']
+-const priceBaguettes = ['3,00€', '3,00€', '3,00€', '3,00€', '3,00€', '3,00€', '3,00€', '3,00€', '3,00€', '3,00€', '3,00€', '3,00€', '3,00€', '3,00€']
+-const pricePizzas = ['4,50€', '4,50€', '4,50€', '4,50€', '4,50€', '4,50€', '4,50€', '4,50€', '4,50€', '2,00€']
+-const pricePaninis = ['2,20€', '2,20€', '2,20€', '2,20€', '2,20€']
+-const priceHotDogs = ['2,20€']
 -const priceKebabs = ['3,00€']
--const priceStarters = ['2,00€', '2,00€', '2,00€', '2,00€', '6,00€', '3,00€', '6,00€', '3,00€']
--const priceChips = ['3,50€', '3,50€', '3,50€', '3,50€', '3,50€']
--const priceWaffles = ['2,20€', '3,20€']
--const priceCrepes = ['2,00€', '3,00€', '2,00€', '3,00€', '3,00€', '3,00€']
--const priceIceCreams = ['2,00€', '3,00€', '3,00€', '4,00€', '3,00€', '2,00€', '3,00€']
--const priceDrinks = ['1,00€', '0,80€', '1,00€', '4,00€']
+-const priceStarters = ['2,20€', '5,00€', '2,20€', '2,20€', '6,00€', '3,00€', '6,00€', '3,00€', '2,20€', '3,50€', '3,50€', '10,00€']
+-const priceChips = ['4,50€', '4,50€', '4,00€', '4,00€', '3,50€']
+-const priceWaffles = ['3,00€', '4,00€']
+-const priceCrepes = ['2,30€', '3,30€', '2,30€', '3,00€', '3,00€', '3,00€']
+-const priceIceCreams = ['2,30€', '3,30€', '4,30€', '5,30€', '3,00€', '2,30€', '3,00€']
+-const priceDrinks = ['1,30€', '1,00€', '1,30€', '4,50€']
 
 //-Ingredients Burgers
 -const normalBurgerIngredients = ['tomate', 'lechuga', 'cebolla']
--const crispyCukysBurgerIngredients = ['lechuga', 'tomate', 'mahonesa', '+Extras 0,30€']
+-const crispyCukysBurgerIngredients = ['lechuga', 'tomate', 'mahonesa', '+Extras 0,50€']
 -const eggBurgerIngredients = ['tomate', 'lechuga', 'cebolla', 'huevo']
 -const baconBurgerIngredients = ['tomate', 'lechuga', 'cebolla', 'bacon']
 -const cheeseBurgerIngredients = ['tomate', 'lechuga', 'cebolla', 'queso']
 -const superBurgerIngredients = ['tomate', 'lechuga', 'cebolla', 'huevo', 'bacon', 'queso']
--const premiumBovineBurgerIngredients = ['lechuga', 'tomate', 'cebolla', 'ternera', '+Extras 0,30€']
--const burgerXLBurgerIngredients = ['doble carne', 'lechuga', 'tomate', 'cebolla', '+Extras 0,30€']
+-const premiumBovineBurgerIngredients = ['lechuga', 'tomate', 'cebolla', 'ternera', '+Extras 0,50€']
+-const burgerXLBurgerIngredients = ['doble carne', 'lechuga', 'tomate', 'cebolla', '+Extras 0,50€']
 
 //-Ingredients Sandwiches
 -const mixSandwichIngredients = ['jamón york', 'queso']
@@ -58,6 +58,7 @@
 -const tunaBaguetteIngredients = ['atún', 'tomate', 'mahonesa']
 -const hamBaguetteIngredients = ['jamón']
 -const chickenBaguetteIngredients = ['pollo']
+-const breadedChickenBaguetteIngredients = ['pollo empanado']
 -const baconBaguetteIngredients = ['bacon', 'queso']
 -const tortillaBaguetteIngredients = ['tortilla francesa']
 -const hamTortillaBaguetteIngredients = ['tortilla francesa', 'jamón serrano', 'tomate', 'lechuga']
