--- a/dev/views/includes/starters-allergens.pug
+++ b/dev/views/includes/starters-allergens.pug
@@ -23,7 +23,7 @@
 
             h3 Con menú:
             p Croquetas +Bebida +Patatas
-            p 3,80€
+            p 6,50€
             .ingredients__img
                 img(src="assets/img/fried-min.png")
                 img(src="assets/img/drink-min.png")
@@ -117,6 +117,66 @@
             h3 Con menú:
             p Delicias de pollo +Bebida +Patatas
             p 4,80€
+            .ingredients__img
+                img(src="assets/img/fried-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
+
+#flamenquins-starter-allergens.lightbox
+    .ingredients
+        center
+            h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
+
+            h3 Con menú:
+            p Flamenquines +Bebida +Patatas
+            p 3,80€
+            .ingredients__img
+                img(src="assets/img/fried-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
+
+#popcornchicken-starter-allergens.lightbox
+    .ingredients
+        center
+            h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
+
+            h3 Con menú:
+            p Palomitas de pollo +Bebida +Patatas
+            p 5,00€
+            .ingredients__img
+                img(src="assets/img/fried-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
+
+#chickenstrips-starter-allergens.lightbox
+    .ingredients
+        center
+            h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
+
+            h3 Con menú:
+            p Tiras de pollo +Bebida +Patatas
+            p 5,00€
+            .ingredients__img
+                img(src="assets/img/fried-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
+
+#prawnsinbatter-starter-allergens.lightbox
+    .ingredients
+        center
+            h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
+
+            h3 Con menú:
+            p Gambas rebozadas +Bebida +Patatas
+            p 12,00€
             .ingredients__img
                 img(src="assets/img/fried-min.png")
                 img(src="assets/img/drink-min.png")
