--- a/dev/views/includes/baguette-ingredients.pug
+++ b/dev/views/includes/baguette-ingredients.pug
@@ -14,7 +14,7 @@
 
             h3 Con menú:
             p Baguette vegetal +Bebida +Patatas
-            p 4,60€
+            p 5,00€
             .ingredients__img
                 img(src="assets/img/baguette-min.png")
                 img(src="assets/img/drink-min.png")
@@ -35,7 +35,7 @@
 
             h3 Con menú:
             p Baguette de atún +Bebida +Patatas
-            p 4,60€
+            p 5,00€
             .ingredients__img
                 img(src="assets/img/baguette-min.png")
                 img(src="assets/img/drink-min.png")
@@ -53,7 +53,7 @@
 
             h3 Con menú:
             p Baguette de jamón +Bebida +Patatas
-            p 4,80€
+            p 5,00€
             .ingredients__img
                 img(src="assets/img/baguette-min.png")
                 img(src="assets/img/drink-min.png")
@@ -71,7 +71,25 @@
 
             h3 Con menú:
             p Baguette de pollo +Bebida +Patatas
-            p 4,80€
+            p 5,00€
+            .ingredients__img
+                img(src="assets/img/baguette-min.png")
+                img(src="assets/img/drink-min.png")
+                img(src="assets/img/chips-min.png")
+
+#breadedchicken-baguette-ingredients.lightbox
+    ul.ingredients
+        h3 Ingredientes baguette de pollo empanado:
+        each breadedChickenIngredients in breadedChickenBaguetteIngredients
+            li= breadedChickenIngredients
+        center
+            h4 Alérgenos:
+            img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
+            img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h3 Con menú:
+            p Baguette de pollo empanado +Bebida +Patatas
+            p 5,00€
             .ingredients__img
                 img(src="assets/img/baguette-min.png")
                 img(src="assets/img/drink-min.png")
@@ -90,7 +108,7 @@
 
             h3 Con menú:
             p Baguette de bacon y queso +Bebida +Patatas
-            p 4,80€
+            p 5,00€
             .ingredients__img
                 img(src="assets/img/baguette-min.png")
                 img(src="assets/img/drink-min.png")
@@ -109,7 +127,7 @@
 
             h3 Con menú:
             p Baguette de tortilla francesa +Bebida +Patatas
-            p 4,60€
+            p 5,00€
             .ingredients__img
                 img(src="assets/img/baguette-min.png")
                 img(src="assets/img/drink-min.png")
@@ -128,7 +146,7 @@
 
             h3 Con menú:
             p Baguette de tortilla y jamón +Bebida +Patatas
-            p 4,80€
+            p 5,00€
             .ingredients__img
                 img(src="assets/img/baguette-min.png")
                 img(src="assets/img/drink-min.png")
@@ -146,7 +164,7 @@
 
             h3 Con menú:
             p Baguette de magreta +Bebida +Patatas
-            p 4,80€
+            p 5,00€
             .ingredients__img
                 img(src="assets/img/baguette-min.png")
                 img(src="assets/img/drink-min.png")
@@ -164,7 +182,7 @@
 
             h3 Con menú:
             p Baguette de lomo +Bebida +Patatas
-            p 4,80€
+            p 5,00€
             .ingredients__img
                 img(src="assets/img/baguette-min.png")
                 img(src="assets/img/drink-min.png")
@@ -182,7 +200,7 @@
 
             h3 Con menú:
             p Baguette de lomo fresco +Bebida +Patatas
-            p 4,80€
+            p 5,00€
             .ingredients__img
                 img(src="assets/img/baguette-min.png")
                 img(src="assets/img/drink-min.png")
@@ -201,7 +219,7 @@
 
             h3 Con menú:
             p Baguette de calamares +Bebida +Patatas
-            p 4,80€
+            p 5,00€
             .ingredients__img
                 img(src="assets/img/baguette-min.png")
                 img(src="assets/img/drink-min.png")
@@ -219,7 +237,7 @@
 
             h3 Con menú:
             p Baguette de salchichas +Bebida +Patatas
-            p 4,80€
+            p 5,00€
             .ingredients__img
                 img(src="assets/img/baguette-min.png")
                 img(src="assets/img/drink-min.png")
@@ -238,7 +256,7 @@
 
             h3 Con menú:
             p Baguette especial +Bebida +Patatas
-            p 4,80€
+            p 5,00€
             .ingredients__img
                 img(src="assets/img/baguette-min.png")
                 img(src="assets/img/drink-min.png")
